force-app/main/default/objects/Account/fields/AI_Assistant_JSON__c.field-meta.xml
<CustomField>
    <fullName>AI_Assistant_JSON__c</fullName>
    <label>AI_Assistant_JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>