force-app/main/default/objects/Account/fields/AI_Risk_Assessment_JSON__c.field-meta.xml
<CustomField>
    <fullName>AI_Risk_Assessment_JSON__c</fullName>
    <label>AI_Risk_Assessment_JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>