force-app/main/default/objects/Account/fields/Legal_Check_Required__c.field-meta.xml
<CustomField>
    <fullName>Legal_Check_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal_Check_Required</label>
    <type>Checkbox</type>
</CustomField>