force-app/main/default/objects/Account/fields/Recent_Summary__c.field-meta.xml
<CustomField>
    <fullName>Recent_Summary__c</fullName>
    <label>Recent Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>